fixing admin style

--- a/src/admin/components/AdminMenu/AdminMenu.css
+++ b/src/admin/components/AdminMenu/AdminMenu.css
@@ -24,6 +24,8 @@
   display: flex;
   justify-content: center;
   transition: 0.2s linear;
+  height: 70px;
+  line-height: 20px;
 }
 .sidebar .nav-links a {
   text-decoration: none;
@@ -33,11 +35,18 @@
   color:white;
 }
 
+.sidebar .adminTitle {
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+
 .sidebar .returnButton {
   position: absolute;
-  min-width: 20px;
+  left: 10px;
+  top: 10px;
+  font-size: 1.5rem;
+  margin-right: 20px;
   z-index: 200;
-  padding: 5px;
   cursor: pointer;
   transition: 0.2s linear;
   color: black;
