--- a/src/admin/screens/Admin/Admin.css
+++ b/src/admin/screens/Admin/Admin.css
@@ -65,9 +65,20 @@
   width: 70vw;
   z-index: 110;
   background-color: rgba(0,0,0,0.1);
-  font-size: 2.5rem;
+  
   margin: 0;
   padding: 30px;
   box-shadow: 3px 2px 3px;
 }
+
+.AdminHome-big-title .h1-title {
+  font-size: 3.7rem;
+  margin-left: 25px;
+}
+
+.AdminHome-section .h2-title {
+  font-size: 1.7rem;
+  margin-left: 15px;
+}
+
 
