--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -46,6 +46,12 @@
   border-radius: 66px;
   color: #FFFFFF;
   cursor: pointer;
+  transition: 0.2s linear;
+}
+
+.banner-button:hover {
+  background-color: white;
+  color: black;
 }
 
 .alice-carousel__prev-btn, .alice-carousel__next-btn{
