--- a/src/components/Greeters/Greeters.css
+++ b/src/components/Greeters/Greeters.css
@@ -6,7 +6,6 @@
   margin-top: 50px;
 }
 .greeters-container {
-
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -16,19 +15,18 @@
   text-align: center;
   padding-bottom: 30px;
   padding-top: 0px;
-  font-size: xx-large;
+  font-size: xxx-large;
 }
 
 .greeters-btn {
   font-family: 'Titillium Web', sans-serif;
-  background-color: #F4E7E7;
+  background-color: var(--bg-color-beige);
   position: relative;
-  
   left: 50%;
   margin-top: 5rem;
+  padding: 10px;
   padding-left: 10%;
   padding-right: 10%;
-  
   transform: translateX(-50%);
   font-style: normal;
   font-weight: bold;
@@ -39,6 +37,12 @@
   border-radius: 66px;
   color: black;
   cursor: pointer;
+  transition: 0.2s linear;
+}
+
+.greeters-btn:hover {
+  background-color: black;
+  color: white;
 }
 
 @media screen and (max-width:500px) {
