--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 :root {
   --text-color: #ff0d0d;
   --bg-color-beige: #faf0e6;
-  --font-typo: 'Titillium Web', sans-serif;
+  --font-typo-title: 'Titillium Web 900', sans-serif;
+  --font-typo-subtitle: 'Titillium Web 400', sans-serif;
+  --font-typo-text: 'Titillium Web 200', sans-serif;
 }
