--- a/src/screens/Contact/Contact.css
+++ b/src/screens/Contact/Contact.css
@@ -3,12 +3,12 @@
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  font-family: var(--font-typo);
 }
 
 .Contact h1 {
   font-size: 3rem;
   font-weight: 900;
+  font-family: var(--font-typo-title);
 }
 
 .Contact p {
@@ -21,6 +21,10 @@
   flex-direction: column;
   font-weight: bold;
   font-size: 0.8rem;
+}
+.Contact .messageContainer, .Contact .infoContainer {
+  font-family: var(--font-typo-subtitle);
+  font-size: 18px;
 }
 
 
