--- a/src/screens/InfoCity/InfoCity.css
+++ b/src/screens/InfoCity/InfoCity.css
@@ -3,9 +3,9 @@
   flex-wrap: wrap;
   justify-content: space-around;
   padding: 0px 100px 100px 100px;
-  font-family: var(--font-typo);
   font-size: 20px;
   text-align: justify;
+  font-family: var(--font-typo-text);
 }
 
 @media screen and (max-width:700px) {
