--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -14,6 +14,7 @@
   transform: translateX(-50%);
   border-radius: 25px;
   object-fit: cover;
+  box-shadow: 0px 0px 8px -3px black;
 }
 
 .banner-text {
