--- a/src/components/CityCard/CityCard.css
+++ b/src/components/CityCard/CityCard.css
@@ -1,9 +1,30 @@
+.CityCard {
+  overflow: hidden;
+  /* width: 400px;
+  height: 300px; */
+}
+
 .city-img {
   width: 400px;
   height: 300px;
   border-radius: 20px;
   object-fit: cover;
+  box-shadow: 0px 0px 8px -3px black;
 }
+
+/* .city-img {
+  width: 100%;
+  height: 100%;
+  margin: 20px;
+  border-radius: 20px;
+  object-fit: cover;
+  transition: transform 0.5s ease;
+}
+
+.CityCard:hover .city-img{
+  transform: scale(1.5);
+  border-radius: 20px;
+} */
 
 .container-citycard{
   height: 300px;
