--- a/src/components/GreetersPagination/GreetersPagination.css
+++ b/src/components/GreetersPagination/GreetersPagination.css
@@ -10,6 +10,7 @@
 .greeters-pagination-title {
   text-align: center;
   padding: 70px;
+  font-family: var(--font-typo-title);
 }
 
 .paginationBttns {
