--- a/src/screens/MeetGreeter/MeetGreeter.css
+++ b/src/screens/MeetGreeter/MeetGreeter.css
@@ -2,11 +2,13 @@
   text-align: center;
   padding-top: 3rem;
   font-size: 3rem;
+  font-family: var(--font-typo-title);
 }
 
 .little-title-meet{
   text-align: center;
   font-size: 2rem;
+  font-family: var(--font-typo-subtitle);
 }
 
 @media screen and (max-width:950px) {
