--- a/src/components/MeetGreeterBar/MeetGreeterBar.css
+++ b/src/components/MeetGreeterBar/MeetGreeterBar.css
@@ -36,3 +36,14 @@
   width: 15rem;
 
 }
+
+@media (max-width: 700px) {
+  .meet-items{
+    display: flex;
+    flex-direction: column;
+    margin-top: 10vh;
+  }
+  .meet-select {
+    margin: 5px 0px;
+  }
+}
