--- a/src/components/ConceptDescription/ConceptDescription.css
+++ b/src/components/ConceptDescription/ConceptDescription.css
@@ -13,4 +13,6 @@ text-align: center;
   margin-bottom: 70px;
   box-shadow: 1px 1px 1px black;
 font-family: var(--font-typo);
+text-align: left;
 }
+
